# ris2bib

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
samples/: sample1.bib  sample1.ris  sample2.ris
src/ris2bib/: __init__.py  bib.py  bib_cli.py  cli.py  gui.py
src/ris2bib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_conversion.py
