[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ris2bib"
version = "0.2.0"
description = "Convert RIS bibliography files to BibTeX (and back), with CLI and simple GUI."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "opisthofulax"}]
keywords = ["bibtex", "ris", "reference", "citation", "cli", "gui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Markup",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)"
]
dependencies = ["bibtexparser>=1.4"]

[project.scripts]
ris2bib = "ris2bib.cli:main"
bib2ris = "ris2bib.bib_cli:main"

[project.gui-scripts]
ris2bib-gui = "ris2bib.gui:main"

[project.urls]
Homepage = "https://github.com/opisthofulax/ris2bib"
Issues = "https://github.com/opisthofulax/ris2bib/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ris2bib = ["py.typed"]

[project.optional-dependencies]
dev = ["pytest>=7"]
gui = ["tkinterdnd2>=0.4.2"]
